force-app/main/default/objects/Attachment__c/fields/Account_Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Attachment_Type__c</fullName>
    <label>Account Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>