force-app/main/default/objects/Attachment__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>