force-app/main/default/objects/Attachment__c/fields/Engineer_Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Attachment_Type__c</fullName>
    <label>Engineer Attachment Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>