force-app/main/default/objects/Attachment__c/fields/Engineers__c.field-meta.xml
<CustomField>
    <fullName>Engineers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineers</label>
    <referenceTo>Engineers__c</referenceTo>
    <relationshipName>Engineer_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>