force-app/main/default/objects/Attachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+ Attachment__c, &apos;View&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>